# tseries-qt4

./: .gitignore  CMakeLists.txt  README.md  tseries.1.in
cmake/: MetnoUtils.cmake
debian_files/: changelog  control  rules
lang/: tseries_de.ts  tseries_fr.ts  tseries_nn.ts  tseries_no.ts  tseries_se.ts
src/: CMakeLists.txt  ClearLineEdit.cc  ClearLineEdit.h  CoordinateManager.cc  CoordinateManager.h  CoordinateTab.cc  CoordinateTab.h  FetchStations.cc  FetchStations.h  FimexTab.cc  FimexTab.h  Makefile  ParameterFilterDialog.cc  ParameterFilterDialog.h  PopupCalendar.cc  PopupCalendar.h  PrepareDataThread.cc  PrepareDataThread.h  StationTab.cc  StationTab.h  WdbBookmarkTools.cc  WdbBookmarkTools.h  WdbCacheThread.cc  WdbCacheThread.h  btseries.cc  clear.xpm  cmake_install.cmake  collapse.xpm  config.h  config.h.in  copy.xpm  delete.xpm  diImageIO.cc  diImageIO.h  expand.xpm  filter.xpm  list-add.xpm  media-record.xpm  metno.xpm  qtsFilterManager.cc  (+35 more)
