PROJECT(tseries)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(MetnoUtils)
INCLUDE(MetnoVersions)
METNO_PVERSION(7.0.6)

FIND_PACKAGE(Boost COMPONENTS date_time REQUIRED)

METNO_FIND_QT4(Gui Core Network Xml)

SET(PKGS
  pets2${METNO_QT_SUFFIX}>=6.0.3
  puMet>=5.1.0
  puDatatypes
  coserver${METNO_QT_SUFFIX}>=2.1.0
)

SET(ENABLE_FIMEX ON CACHE BOOL "use fimex to read NetCDF and other files")
IF(ENABLE_FIMEX)
LIST(APPEND PKGS
  fimex>=0.61
)
ENDIF() # ENABLE_FIMEX
PKG_CHECK_MODULES(PC REQUIRED ${PKGS})

ADD_SUBDIRECTORY(src)


SET(MAN_TSERIES "tseries.bin-${PVERSION}.1")
CONFIGURE_FILE(tseries.1.in "${MAN_TSERIES}")
INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/${MAN_TSERIES}"
  DESTINATION ${CMAKE_INSTALL_MANDIR}
)
